internal/llama/testdata/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: lgtm-backend
  namespace: lgtm
spec:
  podSelector:
    matchLabels:
      app: lgtm-backend
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: kubo
      ports:
        - port: 5001
